build: Modernize the Ant build script.
Paving the way for more modular build setups, and support for jlink
on newer JDKs in order to build self-contained, minimal VMs (tied
to libretro, but should run the Standalone flavor too).